# Sailing_Simulator

./: CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  motor_boat.cpp  motor_boat.hpp
cmake/: GTest.cmake
include/sailing_simulator/: constants.hpp
include/sailing_simulator/debug/: main_window.hpp
include/sailing_simulator/objects/: game_object.hpp  world.hpp
include/sailing_simulator/objects/body_components/: body_component.hpp  dynamic_body_component.hpp  static_body_component.hpp
include/sailing_simulator/objects/dynamics_components/: composite_dynamics_component.hpp  dynamics_component.hpp  engine_dynamics_component.hpp  rudder_dynamics_component.hpp  wind_dynamics_component.hpp
include/sailing_simulator/objects/input_components/: input_component.hpp  qt_motor_boat_input_component.hpp  qt_sailing_boat_input_component.hpp
include/sailing_simulator/objects/wind/: base_wind.hpp  constant_wind.hpp
include/sailing_simulator/physics/: base_wind.hpp  constant_wind.hpp  dynamic_object.hpp  entity.hpp  motor_boat.hpp  object.hpp  sailing_boat.hpp  static_object.hpp  world.hpp
src/: physics_test.cpp
src/debug/: main_window.cpp
src/objects/: world.cpp
src/objects/body_components/: dynamic_body_component.cpp  static_body_component.cpp
src/objects/dynamics_components/: composite_dynamics_component.cpp  engine_dynamics_component.cpp  rudder_dynamics_component.cpp  wind_dynamics_component.cpp
src/objects/input_components/: qt_motor_boat_input_component.cpp  qt_sailing_boat_input_component.cpp
src/physics/: dynamic_object.cpp  entity.cpp  motor_boat.cpp  object.cpp  sailing_boat.cpp  static_object.cpp  world.cpp
test/include/test/: comparisions.hpp  dynamic_body_component_stub.hpp
test/src/objects/body_components/: dynamic_body_component_test.cpp
test/src/objects/dynamics_components/: engine_dynamics_component_test.cpp  wind_dynamics_component_helpers_test.cpp  wind_dynamics_component_test.cpp
